# celebrity-image-finder

./: .env.example  .gitignore  pyproject.toml
docs/brainstorms/: 2026-03-28-celebrity-image-finder-requirements.md
docs/plans/: 2026-03-28-001-feat-celebrity-image-finder-plan.md
src/finder/: cli.py  config.py  dedup.py  downloader.py  filters.py  models.py  pipeline.py  review.py
src/finder/sources/: bing.py  duckduckgo.py  genius.py  spotify.py
tests/: test_cli.py  test_dedup.py  test_downloader.py  test_filters.py  test_pipeline.py  test_sources.py
